2004-12-08  Damien Sandras  <dsandras@gnome.org>

	* src/Makefile.am, src/common.h, src/endpoint.cpp, src/endpoint.h,
	src/h323endpoint.cpp, src/pref_window.cpp, src/sipendpoint.cpp,
	src/sipendpoint.h, src/sipregistrar.cpp, src/sipregistrar.h,
	src/urlhandler.cpp: Committed full SIP support, SIP Registrar support,
	SIP Outbound Proxy support to GnomeMeeting CVS.

2004-12-08  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Added keys for SIP preferences.

	* lib/contacts/gm_contacts-ldap.cpp: Some more PACKAGE_NAME usage
	instead of /apps/gnomemeeting.

	* lib/contacts/gm_contacts-remote.cpp: Same here.

2004-12-07  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Reorganized GConf keys to simplify
	things and group all H.323 keys under the same category.

	* lib/gnome_prefs_window.c: Allow widget to expand to the full size
	of the table.

	* src/common.h, src/config.cpp, src/h323endpoint.cpp, 
	src/h323gatekeeper.cpp, src/h323gatekeeper.h, src/pcssendpoint.cpp,
	src/pref_window.cpp, src/tools.cpp, src/urlhandler.cpp: Reorganized
	GConf keys and reorganized preferences.

2004-12-06  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Reverted previous commit.

2004-12-06  Damien Sandras  <dsandras@gnome.org>

	* src/chat_window.cpp, src/endpoint.cpp, src/endpoint.h: Added text
	chat support back.

2004-12-06  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts-ldap.cpp:
	Fixed warnings, thanks Kilian!

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* lib/gm_conf-gconf.c: Use PACKAGE_NAME instead of gnomemeeting
	to start listeners.

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Fixed OPAL version detection.

	* src/Makefile.am: Cleanups.

	* src/misc.cpp: Use PACKAGE_NAME in gnomemeeting_threads_*.

2004-12-05  Damien Sandras  <dsandras@gnome.org>

	* Makefile.am: Use PACKAGE_NAME everywhere.

2004-12-05  Damien Sandras  <dsandras@gnome.org>
