@@ -1,3 +1,12 @@
+2004-12-09  Damien Sandras  <dsandras@gnome.org>
+
+	* src/endpoint.cpp: Added back support to display the remote
+	application name, the remote user and the remote URL thanks to my
+	changes to OPAL.
+
+	* src/sipendpoint.cpp, src/sipendpoint.h: Fixed RTP stats callback
+	which was awaiting an H.323 connection.
+
 2004-12-08  Damien Sandras  <dsandras@gnome.org>
 
 	* src/Makefile.am, src/common.h, src/endpoint.cpp, src/endpoint.h,
